renamed css location

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>99 verhalen</title>
-    <link rel="stylesheet" href="/ccs/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
