--- a/html/login.html
+++ b/html/login.html
@@ -3,29 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>99 verhalen</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
   <!-- Dit is de header met het logo en de titel van de website -->
   <header>
-        <img src="Transavia_logo.svg.png" alt="">
+        <img src="images/Transavia_logo.svg.png" alt="">
         <h1>99 Verhalen</h1>
           <nav>
             <ul>
-                <li><a href="index.html">Alle verhalen</a></li>
+                <li><a href="/index.html">Alle verhalen</a></li>
                 <li><a href="login.html">Inloggen</a></li>
             </ul>
         </nav>
     </header>
 
- <!-- de navigatie van de website --> <nav>
-        <ul>
-            <li><a href="index.html">Verhalen</a></li>
-            <li><a href="login.html">Profiel</a></li>
-            <li><a href="index.html">Contact</a></li>
-        </ul>
-    </nav>
+
 
  <!-- Het in te vullen formulier om in te loggen -->
     <main>
