--- a/index.html
+++ b/index.html
@@ -10,24 +10,16 @@
 <body>
     <!-- Dit is de header met het logo en de titel van de website -->
     <header>
-        <img src="Transavia_logo.svg.png" alt="">
+        <img src="images/Transavia_logo.svg.png" alt="">
         <h1>99 Verhalen</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Alle verhalen</a></li>
-                <li><a href="login.html">Inloggen</a></li>
+                <li><a href="html/login.html">Inloggen</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- De navigatie van de website-->
-    <nav>
-        <ul>
-            <li><a href="index.html">Verhalen</a></li>
-            <li><a href="login.html">Profiel</a></li>
-            <li><a href="index.html">Contact</a></li>
-        </ul>
-    </nav>
 
     <!-- Het aanbevolen verhaal-->
     <main>
