--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>99 verhalen</title>
+    <title>99 verhalen!</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
