--- a/html/login.html
+++ b/html/login.html
@@ -13,7 +13,7 @@
         <h1>99 Verhalen</h1>
           <nav>
             <ul>
-                <li><a href="/index.html">Alle verhalen</a></li>
+                <li><a href="../index.html">Alle verhalen</a></li>
                 <li><a href="login.html">Inloggen</a></li>
             </ul>
         </nav>
