--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Alle verhalen</a></li>
-                <li><a href="/html/login.html">Inloggen</a></li>
+                <li><a href="../html/login.html">Inloggen</a></li>
             </ul>
         </nav>
     </header>
