--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Dit is de header met het logo en de titel van de website -->
     <header>
         <img src="images/Transavia_logo.svg.png" alt="">
-        <h1>99 Verhalen</h1>
+        <h1>99 Verhalen!</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Alle verhalen</a></li>
