new image added

--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
         <section class="aanbevolen">
             <h1>Verhalen voor onderweg</h1>
             <p>Log in met jouw boekingsnummer om jouw favorieten verhalen op te slaan en te downloaden op een apparaat tijdens de reis.</p>
-             <a href="#alleverhalen">Zie overzicht van alle verhalen</a>
+            <a href="#alleverhalen">Zie overzicht van alle verhalen</a>
             <article>
                 <h2>Aanbevolen verhalen</h2>
-                <img src="images/book3.jpg" alt="">
+                <a href="Verhaal.html">
+                <img src="images/verhaal7.jpg" alt="">  </a>
                 <p>Rating: 3/5</p>
-                <p>Categorie: Gevoel</p>
-                <button>Lees verhaal </button>
+                <a href="Verhaal.html">
+               <button>Lees verhaal </button>   
+                </a>
             </article>
         </section>
 
@@ -47,7 +49,7 @@
 
         <!-- Filteren op een verhaal en een knop om random verhalen op te halen -->
         <section class="filteren">
-           <h2>Filter de verhalen</h2>
+            <h2>Filter de verhalen</h2>
             <button>Filteren</button>
             <button>Random verhalen</button>
         </section>
@@ -56,39 +58,39 @@
         <section class="verhalen">
             <h1 id="alleverhalen">Alle verhalen </h1>
             <article>
-             <h3>Telegraaf</h3>
-              <img src="images/verhaal1.jpg" alt="">
-               <!-- <h3>Kinderboek (45)</h3>
+                <h3>Telegraaf</h3>
+                <img src="images/verhaal1.jpg" alt="">
+                <!-- <h3>Kinderboek (45)</h3>
                 <img src="images/book1.jpg" alt="">
                 <p>Rating: 3/5</p>
                 <button>Voeg toe aan lijst</button> -->
             </article>
             <article>
-             <h3>Verliefd</h3>
-              <img src="images/verhaal2.jpg" alt="">
-               <!-- <h3>Kinderboek (45)</h3>
+                <h3>Verliefd</h3>
+                <img src="images/verhaal2.jpg" alt="">
+                <!-- <h3>Kinderboek (45)</h3>
                 <img src="images/book2.jpg" alt="">
                 <p>Rating: 3/5</p>
                 <button>Voeg toe aan lijst</button> -->
             </article>
             <article>
-            <h3>Regenboog</h3>
-            <img src="images/verhaal3.jpg" alt="">
-             <!--   <h3>Kinderboek (45)</h3>
+                <h3>Regenboog</h3>
+                <img src="images/verhaal3.jpg" alt="">
+                <!--   <h3>Kinderboek (45)</h3>
                 <img src="images/book3.jpg" alt="">
                 <p>Rating: 3/5</p>
                 <button>Voeg toe aan lijst</button> -->
             </article>
             <article>
-               <h3>Blind</h3>
+                <h3>Blind</h3>
                 <img src="images/verhaal4.jpg" alt="">
             </article>
             <article>
-               <h3>Alzheimer</h3>
+                <h3>Alzheimer</h3>
                 <img src="images/verhaal5.jpg" alt="">
             </article>
             <article>
-               <h3>Droom</h3>
+                <h3>Droom</h3>
                 <img src="images/verhaal6.jpg" alt="">
             </article>
         </section>
